add updates to session3

--- a/website/_assets/references.bib
+++ b/website/_assets/references.bib
@@ -13,3 +13,18 @@
 	eprint = {https://science.sciencemag.org/content/317/5837/482.full.pdf},
 	journal = {Science}
 }
+
+@Inbook{Batagelj2018,
+author="Batagelj, Vladimir",
+editor="Alhajj, Reda
+and Rokne, Jon",
+title="Python Packages for Networks",
+bookTitle="Encyclopedia of Social Network Analysis and Mining",
+year="2018",
+publisher="Springer New York",
+address="New York, NY",
+pages="1943--1952",
+isbn="978-1-4939-7131-2",
+doi="10.1007/978-1-4939-7131-2_110210",
+url="https://doi.org/10.1007/978-1-4939-7131-2_110210"
+}
