add intro-to-numba and adjust pandas

--- a/notebooks/session3/intro-to-pandas.ipynb
+++ b/notebooks/session3/intro-to-pandas.ipynb
@@ -660,7 +660,7 @@
     }
    ],
    "source": [
-    "Image(filename='dataframe.jpg')"
+    "Image(filename='img/dataframe.jpg')"
    ]
   },
   {
@@ -2071,7 +2071,7 @@
     }
    ],
    "source": [
-    "Image(filename='split-apply-combine.png')"
+    "Image(filename='img/split-apply-combine.png')"
    ]
   },
   {
@@ -2636,7 +2636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
