--- a/_downloads/4c76bafbc4d8f342a0fe01b5a4f6dea9/intro-to-jupyter-notebooks.ipynb
+++ b/_downloads/4c76bafbc4d8f342a0fe01b5a4f6dea9/intro-to-jupyter-notebooks.ipynb
@@ -461,9 +461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "run simple.py"
    ]
@@ -476,13 +484,6 @@
    "source": [
     "# %load simple.py\n",
     "print(\"Hello World\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "More details can be found [here](http://quant-econ.net/py/getting_started.html#additional-software)"
    ]
   },
   {
