[session3] update notebooks

--- a/notebooks/session3/intro-to-numba.ipynb
+++ b/notebooks/session3/intro-to-numba.ipynb
@@ -494,7 +494,7 @@
     {
      "data": {
       "text/plain": [
-       "<memory at 0x7f927b4009a0>"
+       "<memory at 0x7ff9362f2cc0>"
       ]
      },
      "execution_count": 14,
@@ -627,8 +627,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 8s, sys: 923 ms, total: 1min 9s\n",
-      "Wall time: 1min 8s\n"
+      "CPU times: user 1min 21s, sys: 1.39 s, total: 1min 22s\n",
+      "Wall time: 1min 22s\n"
      ]
     }
    ],
@@ -702,8 +702,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 659 ms, sys: 55.3 ms, total: 715 ms\n",
-      "Wall time: 783 ms\n"
+      "CPU times: user 644 ms, sys: 47.6 ms, total: 691 ms\n",
+      "Wall time: 774 ms\n"
      ]
     }
    ],
@@ -766,7 +766,7 @@
       "    #   data = arg(0, name=data)  :: array(float64, 2d, C)\n",
       "    #   num_products = arg(1, name=num_products)  :: int64\n",
       "    #   col_sums = arg(2, name=col_sums)  :: array(float64, 1d, C)\n",
-      "    #   $2load_global.0 = global(np: <module 'numpy' from '/Users/matthewmckay/anaconda3/envs/lecture-python/lib/python3.8/site-packages/numpy/__init__.py'>)  :: Module(<module 'numpy' from '/Users/matthewmckay/anaconda3/envs/lecture-python/lib/python3.8/site-packages/numpy/__init__.py'>)\n",
+      "    #   $2load_global.0 = global(np: <module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)  :: Module(<module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)\n",
       "    #   $4load_method.1 = getattr(value=$2load_global.0, attr=empty)  :: Function(<built-in function empty>)\n",
       "    #   del $2load_global.0\n",
       "    #   $10build_tuple.4 = build_tuple(items=[Var(num_products, <ipython-input-19-65aa5d38f6b9>:3), Var(num_products, <ipython-input-19-65aa5d38f6b9>:3)])  :: UniTuple(int64 x 2)\n",
@@ -897,7 +897,7 @@
       "                #   del numerator\n",
       "                #   del denominator\n",
       "                #   del $98pred\n",
-      "                #   $100load_global.2 = global(np: <module 'numpy' from '/Users/matthewmckay/anaconda3/envs/lecture-python/lib/python3.8/site-packages/numpy/__init__.py'>)  :: Module(<module 'numpy' from '/Users/matthewmckay/anaconda3/envs/lecture-python/lib/python3.8/site-packages/numpy/__init__.py'>)\n",
+      "                #   $100load_global.2 = global(np: <module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)  :: Module(<module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)\n",
       "                #   $102load_attr.3 = getattr(value=$100load_global.2, attr=nan)  :: float64\n",
       "                #   del $100load_global.2\n",
       "                #   cond_prob = $102load_attr.3  :: float64\n",
@@ -1001,7 +1001,6 @@
    "source": [
     "import numpy as np\n",
     "from numba import vectorize, jit, float64\n",
-    "from quantecon.util import tic, toc\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -1099,31 +1098,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOC: Elapsed: 0:00:1.09\n"
+      "CPU times: user 1.12 s, sys: 5.41 ms, total: 1.12 s\n",
+      "Wall time: 1.13 s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.093743085861206"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tic()\n",
-    "x = quad(0.2, n)\n",
-    "toc()"
+    "%%time\n",
+    "x = quad(0.2, n)"
    ]
   },
   {
@@ -1191,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,15 +1189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 85.7 ms, sys: 2.33 ms, total: 88 ms\n",
-      "Wall time: 87.4 ms\n"
+      "CPU times: user 93.2 ms, sys: 3.27 ms, total: 96.5 ms\n",
+      "Wall time: 94.9 ms\n"
      ]
     }
    ],
@@ -1219,15 +1208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.7 ms, sys: 361 µs, total: 28.1 ms\n",
-      "Wall time: 28.4 ms\n"
+      "CPU times: user 27 ms, sys: 453 µs, total: 27.5 ms\n",
+      "Wall time: 27.6 ms\n"
      ]
     }
    ],
