--- a/notebooks/session3/intro-to-numpy.ipynb
+++ b/notebooks/session3/intro-to-numpy.ipynb
@@ -1143,7 +1143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's multiple each element between a and b"
+    "Let's multiply each element between a and b"
    ]
   },
   {
