--- a/_downloads/fa9990586d330e8394dff4efe9f1044b/intro-to-numpy.ipynb
+++ b/_downloads/fa9990586d330e8394dff4efe9f1044b/intro-to-numpy.ipynb
@@ -1143,7 +1143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's multiple each element between a and b"
+    "Let's multiply each element between a and b"
    ]
   },
   {
