--- a/notebooks/session3/intro-to-numba.ipynb
+++ b/notebooks/session3/intro-to-numba.ipynb
@@ -16,31 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
    ]
   },
   {
@@ -51,10 +31,30 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "int"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        " 'to_bytes']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,26 +166,6 @@
    "metadata": {},
    "source": [
     "What do these methods do? Allow for comparison operators etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a == 2"
    ]
   },
   {
@@ -205,6 +185,26 @@
     }
    ],
    "source": [
+    "a == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "a.__eq__(2)"
    ]
   },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "numpy.int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,12 +277,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rather than a general `int` of arbitrary size this is an `int64` value. So it can only represent 64-bit integers and the maximum value is: 9,223,372,036,854,775,807"
+    "Rather than a general `int` of arbitrary size this is an `int64` value. \n",
+    "\n",
+    "It can only represent 64-bit integers and the maximum value is: 9,223,372,036,854,775,807"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,14 +293,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9223372036854775807"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-12-9feb3951cf2a>:1: RuntimeWarning: overflow encountered in long_scalars\n",
+      "<ipython-input-36-9feb3951cf2a>:1: RuntimeWarning: overflow encountered in long_scalars\n",
       "  b[0] + 1\n"
      ]
     },
@@ -308,7 +330,7 @@
        "-9223372036854775808"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,13 +343,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`numpy` values are still objects:"
+    "**Question:** What happens with `python int` objects?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -470,7 +501,7 @@
        " 'view']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,21 +514,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** These are still objects, but the array operators of NumPy allow you to run operations over the array of values lower down in `C` and `Fortran` then it casts those results back into `python`"
+    "**Note:** These are still objects, but the array operators of NumPy provide an automatic interface to run operations over the array of values lower down in `C` and `Fortran` then it casts those results back into `python`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<memory at 0x7ff9362f2cc0>"
+       "<memory at 0x7ff7cfd259a0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,15 +651,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 21s, sys: 1.39 s, total: 1min 22s\n",
-      "Wall time: 1min 22s\n"
+      "CPU times: user 1min 12s, sys: 1.1 s, total: 1min 13s\n",
+      "Wall time: 1min 13s\n"
      ]
     }
    ],
@@ -648,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,15 +726,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 644 ms, sys: 47.6 ms, total: 691 ms\n",
-      "Wall time: 774 ms\n"
+      "CPU times: user 657 ms, sys: 44.6 ms, total: 702 ms\n",
+      "Wall time: 743 ms\n"
      ]
     }
    ],
@@ -714,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +754,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -752,7 +783,7 @@
      "text": [
       "coexport_probability (array(float64, 2d, C), int64, array(float64, 1d, C))\n",
       "--------------------------------------------------------------------------------\n",
-      "# File: <ipython-input-19-65aa5d38f6b9>\n",
+      "# File: <ipython-input-43-65aa5d38f6b9>\n",
       "# --- LINE 1 --- \n",
       "\n",
       "@jit(nopython=True)\n",
@@ -769,8 +800,8 @@
       "    #   $2load_global.0 = global(np: <module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)  :: Module(<module 'numpy' from '/Users/rsitworkshop/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py'>)\n",
       "    #   $4load_method.1 = getattr(value=$2load_global.0, attr=empty)  :: Function(<built-in function empty>)\n",
       "    #   del $2load_global.0\n",
-      "    #   $10build_tuple.4 = build_tuple(items=[Var(num_products, <ipython-input-19-65aa5d38f6b9>:3), Var(num_products, <ipython-input-19-65aa5d38f6b9>:3)])  :: UniTuple(int64 x 2)\n",
-      "    #   $12call_method.5 = call $4load_method.1($10build_tuple.4, func=$4load_method.1, args=[Var($10build_tuple.4, <ipython-input-19-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (UniTuple(int64 x 2),) -> array(float64, 2d, C)\n",
+      "    #   $10build_tuple.4 = build_tuple(items=[Var(num_products, <ipython-input-43-65aa5d38f6b9>:3), Var(num_products, <ipython-input-43-65aa5d38f6b9>:3)])  :: UniTuple(int64 x 2)\n",
+      "    #   $12call_method.5 = call $4load_method.1($10build_tuple.4, func=$4load_method.1, args=[Var($10build_tuple.4, <ipython-input-43-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (UniTuple(int64 x 2),) -> array(float64, 2d, C)\n",
       "    #   del $4load_method.1\n",
       "    #   del $10build_tuple.4\n",
       "    #   proximity = $12call_method.5  :: array(float64, 2d, C)\n",
@@ -781,7 +812,7 @@
       "    # --- LINE 4 --- \n",
       "    #   $16load_global.6 = global(range: <class 'range'>)  :: Function(<class 'range'>)\n",
       "    #   $const18.7 = const(int, 0)  :: Literal[int](0)\n",
-      "    #   $22call_function.9 = call $16load_global.6($const18.7, num_products, func=$16load_global.6, args=[Var($const18.7, <ipython-input-19-65aa5d38f6b9>:4), Var(num_products, <ipython-input-19-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (int64, int64) -> range_state_int64\n",
+      "    #   $22call_function.9 = call $16load_global.6($const18.7, num_products, func=$16load_global.6, args=[Var($const18.7, <ipython-input-43-65aa5d38f6b9>:4), Var(num_products, <ipython-input-43-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (int64, int64) -> range_state_int64\n",
       "    #   del $const18.7\n",
       "    #   del $16load_global.6\n",
       "    #   $24get_iter.10 = getiter(value=$22call_function.9)  :: range_iter_int64\n",
@@ -807,7 +838,7 @@
       "        # --- LINE 5 --- \n",
       "        #   $30load_global.2 = global(range: <class 'range'>)  :: Function(<class 'range'>)\n",
       "        #   $const32.3 = const(int, 0)  :: Literal[int](0)\n",
-      "        #   $36call_function.5 = call $30load_global.2($const32.3, num_products, func=$30load_global.2, args=[Var($const32.3, <ipython-input-19-65aa5d38f6b9>:5), Var(num_products, <ipython-input-19-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (int64, int64) -> range_state_int64\n",
+      "        #   $36call_function.5 = call $30load_global.2($const32.3, num_products, func=$30load_global.2, args=[Var($const32.3, <ipython-input-43-65aa5d38f6b9>:5), Var(num_products, <ipython-input-43-65aa5d38f6b9>:3)], kws=(), vararg=None)  :: (int64, int64) -> range_state_int64\n",
       "        #   del $const32.3\n",
       "        #   del $30load_global.2\n",
       "        #   $38get_iter.6 = getiter(value=$36call_function.5)  :: range_iter_int64\n",
@@ -835,7 +866,7 @@
       "            # --- LINE 6 --- \n",
       "            #   $48compare_op.5 = index2 > index1  :: bool\n",
       "            #   bool50 = global(bool: <class 'bool'>)  :: Function(<class 'bool'>)\n",
-      "            #   $50pred = call bool50($48compare_op.5, func=bool50, args=(Var($48compare_op.5, <ipython-input-19-65aa5d38f6b9>:6),), kws=(), vararg=None)  :: (bool,) -> bool\n",
+      "            #   $50pred = call bool50($48compare_op.5, func=bool50, args=(Var($48compare_op.5, <ipython-input-43-65aa5d38f6b9>:6),), kws=(), vararg=None)  :: (bool,) -> bool\n",
       "            #   del bool50\n",
       "            #   del $48compare_op.5\n",
       "            #   branch $50pred, 52, 54\n",
@@ -871,7 +902,7 @@
       "            #   $74load_global.11 = global(max: <built-in function max>)  :: Function(<built-in function max>)\n",
       "            #   $80binary_subscr.14 = getitem(value=col_sums, index=index1)  :: float64\n",
       "            #   $86binary_subscr.17 = getitem(value=col_sums, index=index2)  :: float64\n",
-      "            #   $88call_function.18 = call $74load_global.11($80binary_subscr.14, $86binary_subscr.17, func=$74load_global.11, args=[Var($80binary_subscr.14, <ipython-input-19-65aa5d38f6b9>:9), Var($86binary_subscr.17, <ipython-input-19-65aa5d38f6b9>:9)], kws=(), vararg=None)  :: (float64, float64) -> float64\n",
+      "            #   $88call_function.18 = call $74load_global.11($80binary_subscr.14, $86binary_subscr.17, func=$74load_global.11, args=[Var($80binary_subscr.14, <ipython-input-43-65aa5d38f6b9>:9), Var($86binary_subscr.17, <ipython-input-43-65aa5d38f6b9>:9)], kws=(), vararg=None)  :: (float64, float64) -> float64\n",
       "            #   del $86binary_subscr.17\n",
       "            #   del $80binary_subscr.14\n",
       "            #   del $74load_global.11\n",
@@ -885,7 +916,7 @@
       "            #   $96compare_op.21 = denominator == $const94.20  :: bool\n",
       "            #   del $const94.20\n",
       "            #   bool98 = global(bool: <class 'bool'>)  :: Function(<class 'bool'>)\n",
-      "            #   $98pred = call bool98($96compare_op.21, func=bool98, args=(Var($96compare_op.21, <ipython-input-19-65aa5d38f6b9>:10),), kws=(), vararg=None)  :: (bool,) -> bool\n",
+      "            #   $98pred = call bool98($96compare_op.21, func=bool98, args=(Var($96compare_op.21, <ipython-input-43-65aa5d38f6b9>:10),), kws=(), vararg=None)  :: (bool,) -> bool\n",
       "            #   del bool98\n",
       "            #   del $96compare_op.21\n",
       "            #   branch $98pred, 100, 108\n",
@@ -924,7 +955,7 @@
       "            # --- LINE 14 --- \n",
       "            #   jump 116\n",
       "            # label 116\n",
-      "            #   cond_prob.2 = phi(incoming_values=[Var(cond_prob.1, <ipython-input-19-65aa5d38f6b9>:13), Var(cond_prob, <ipython-input-19-65aa5d38f6b9>:11)], incoming_blocks=[108, 100])  :: float64\n",
+      "            #   cond_prob.2 = phi(incoming_values=[Var(cond_prob.1, <ipython-input-43-65aa5d38f6b9>:13), Var(cond_prob, <ipython-input-43-65aa5d38f6b9>:11)], incoming_blocks=[108, 100])  :: float64\n",
       "            #   $122binary_subscr.5 = getitem(value=proximity, index=index1)  :: array(float64, 1d, C)\n",
       "            #   $122binary_subscr.5[index2] = cond_prob.2  :: (array(float64, 1d, C), int64, float64) -> none\n",
       "            #   del $122binary_subscr.5\n",
@@ -988,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "nbpresent": {
      "id": "cacd76f0-600a-4ac9-ba39-ae23747177c8"
@@ -1017,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,15 +1129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.12 s, sys: 5.41 ms, total: 1.12 s\n",
-      "Wall time: 1.13 s\n"
+      "CPU times: user 1.15 s, sys: 6.77 ms, total: 1.16 s\n",
+      "Wall time: 1.16 s\n"
      ]
     }
    ],
@@ -1180,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,15 +1220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 93.2 ms, sys: 3.27 ms, total: 96.5 ms\n",
-      "Wall time: 94.9 ms\n"
+      "CPU times: user 83.3 ms, sys: 1.99 ms, total: 85.3 ms\n",
+      "Wall time: 84.8 ms\n"
      ]
     }
    ],
@@ -1208,14 +1239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27 ms, sys: 453 µs, total: 27.5 ms\n",
+      "CPU times: user 26.8 ms, sys: 509 µs, total: 27.3 ms\n",
       "Wall time: 27.6 ms\n"
      ]
     }
@@ -1240,6 +1271,13 @@
     "\n",
     "But remember, JIT compilation for Python is still limited --- see [here](http://numba.pydata.org/numba-doc/dev/reference/pysupported.html) but has grown very quickly"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
