--- a/notebooks/session3/intro-to-matplotlib.ipynb
+++ b/notebooks/session3/intro-to-matplotlib.ipynb
@@ -43,13 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def utility(x1,alpha,x2,beta):\n",
+    "def utility(x1, alpha, x2, beta):\n",
     "    return (x1**alpha)*(x2**beta)\n",
     "\n",
-    "def isoquant(x1,alpha,beta,u):\n",
+    "def isoquant(x1, alpha, beta, u):\n",
     "    return (u/(x1**alpha))**(1/beta)\n",
     "\n",
-    "def budgetconst(m,p1,p2,x1):\n",
+    "def budgetconst(m, p1, p2, x1):\n",
     "    return (m/p2)-(p1/p2)*x1"
    ]
   },
@@ -97,20 +97,69 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1, x2, u = find_optimal(1, 2, 0.5, 0.5, m=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5, 0.25, 0.3535533905932738)"
+       "0.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_optimal(1,2,0.5,0.5,m=1)"
+    "x1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3535533905932738"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u"
    ]
   },
   {
@@ -122,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,22 +192,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Find Optimal Points\n",
-    "x1i,x2i,u = find_optimal(p1,p2,alpha,beta,m)\n",
+    "x1i, x2i, u = find_optimal(p1, p2, alpha, beta, m)\n",
     "\n",
     "# x-axis range\n",
     "x1 = np.arange(0.1,10,0.1)\n",
     "\n",
     "# IsoQuant\n",
-    "x2a = isoquant(x1,alpha,beta,u)\n",
+    "x2a = isoquant(x1, alpha, beta, u)\n",
     "\n",
     "# Budget Constraint\n",
     "x2b = budgetconst(m,p1,p2,x1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. , 1.1, 1.2, 1.3,\n",
+       "       1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2. , 2.1, 2.2, 2.3, 2.4, 2.5, 2.6,\n",
+       "       2.7, 2.8, 2.9, 3. , 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9,\n",
+       "       4. , 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5. , 5.1, 5.2,\n",
+       "       5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6. , 6.1, 6.2, 6.3, 6.4, 6.5,\n",
+       "       6.6, 6.7, 6.8, 6.9, 7. , 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8,\n",
+       "       7.9, 8. , 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9. , 9.1,\n",
+       "       9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -169,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -188,22 +271,29 @@
    "source": [
     "# Setup a Figure\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "# Add the Isoquant Plot\n",
+    "\n",
+    "# Add the Isoquant Plot (x2a given x1)\n",
     "ax.plot(x1, x2a, lw=2, alpha=0.6, label='isoquant')\n",
-    "# Add the Budget Constraint\n",
+    "\n",
+    "# Add the Budget Constraint (x2b given x1)\n",
     "ax.plot(x1, x2b, lw=2, alpha=0.6, label='budget')\n",
+    "\n",
     "# Add vertical and horizontal lines for optimal solution\n",
-    "ax.vlines(x1i,0,x2i, linestyles=\"dashed\")\n",
-    "ax.hlines(x2i,0,x1i, linestyles=\"dashed\")\n",
-    "# Plot optimal allocation\n",
-    "ax.plot(x1i,x2i,'or')\n",
+    "ax.vlines(x1i, 0, x2i, linestyles=\"dashed\")\n",
+    "ax.hlines(x2i, 0, x1i, linestyles=\"dashed\")\n",
+    "\n",
+    "# Plot optimal allocation intersection ('or' = red circle)\n",
+    "ax.plot(x1i, x2i, 'or')\n",
+    "\n",
     "# Add Labels\n",
     "ax.set_xlabel(r'$x_{1}$', fontsize=14)\n",
     "ax.set_xlim(0, 10)\n",
     "ax.set_ylabel('$x_{2}$', fontsize=14)\n",
     "ax.set_ylim(0, 10)\n",
+    "\n",
     "# Add a Legend\n",
     "ax.legend(loc='upper right', frameon=False, fontsize=14)\n",
+    "\n",
     "# Plot the Figure\n",
     "plt.show()"
    ]
@@ -224,12 +314,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_figure(alpha=alpha,beta=beta,p1=p1,p2=p2,m=m):\n",
-    "    x1i,x2i,u = find_optimal(p1,p2,alpha,beta,m)\n",
+    "def plot_figure(alpha, beta, p1, p2, m):\n",
+    "    x1i, x2i, u = find_optimal(p1, p2, alpha, beta, m)\n",
     "    x1 = np.arange(0.1,10,0.1)\n",
     "    x2a = isoquant(x1,alpha,beta,u)\n",
     "    x2b = budgetconst(m,p1,p2,x1)\n",
@@ -249,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57e585bcf73f4b0a925aaaf660ce3777",
+       "model_id": "1532812ad7444927bccb359247497fc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,19 +382,19 @@
    "source": [
     "from ipywidgets import interact\n",
     "\n",
-    "@interact(alpha=(0.01,0.99,0.01),beta=(0.01,0.99,0.01), p1=(1,10,1),p2=(1,10,1),m=(1,24,1))\n",
-    "def plot_figure(alpha=alpha,beta=beta,p1=p1,p2=p2,m=m):\n",
-    "    x1i,x2i,u = find_optimal(p1,p2,alpha,beta,m)\n",
+    "@interact(alpha=(0.01, 0.99, 0.01), beta=(0.01, 0.99, 0.01), p1=(1, 4, 0.5), p2=(1, 4, 0.5), m=(10, 30, 1))\n",
+    "def plot_figure(alpha, beta, p1 ,p2 ,m):\n",
+    "    x1i, x2i, u = find_optimal(p1, p2, alpha, beta, m)\n",
     "    #-Figure-#\n",
-    "    x1 = np.arange(0.1,10,0.1)\n",
-    "    x2a = isoquant(x1,alpha,beta,u)\n",
-    "    x2b = budgetconst(m,p1,p2,x1)\n",
+    "    x1 = np.arange(0.1, 10, 0.1)\n",
+    "    x2a = isoquant(x1, alpha, beta, u)\n",
+    "    x2b = budgetconst(m, p1, p2, x1)\n",
     "    fig, ax = plt.subplots(figsize=(8,8))\n",
     "    ax.plot(x1, x2a, lw=2, alpha=0.6, label='isoquant')\n",
     "    ax.plot(x1, x2b, lw=2, alpha=0.6, label='budget')\n",
-    "    ax.vlines(x1i,0,x2i, linestyles=\"dashed\")\n",
-    "    ax.hlines(x2i,0,x1i, linestyles=\"dashed\")\n",
-    "    ax.plot(x1i,x2i,'or')\n",
+    "    ax.vlines(x1i, 0, x2i, linestyles=\"dashed\")\n",
+    "    ax.hlines(x2i, 0, x1i, linestyles=\"dashed\")\n",
+    "    ax.plot(x1i, x2i, 'or')\n",
     "    ax.set_xlabel(r'$x_{1}$', fontsize=14)\n",
     "    ax.set_xlim(0, 10)\n",
     "    ax.set_ylabel('$x_{2}$', fontsize=14)\n",
